<resources>
    <string name="app_name">MyAthletic</string>

    <!--Boton Menu Principal-->
    <string name="empezar">Pulsa para empezar</string>

    <!--Botones Menu-->
    <string name="plantilla">Plantilla</string>
    <string name="himno">Himno</string>
    <string name="socios">Rincon del Socio</string>
    <string name="acerca">Acerca de</string>
    <string name="club">El Club</string>

    <!--El Club-->
    <string name="club1">Nombre del Club: Athletic Club.\nFundación: 1898.\nSede social: Ibaigane, Alameda Mazarredo, 23 - 48009 Bilbao.\n\nNúmero de socios/as: 44.560.\nPresupuesto 2017-18: 101.940.138 euros.\nTemporadas en Primera División: Todas.</string>
    <string name="contactarclub">Para contactar, pinche en una de estas opciones:</string>
    <string name="contactarclubboton">Contacto Telefónico</string>
    <string name="contactarclubboton2">Contacta via Mail</string>
    <string name="enviar_mail">Enviado via MyAthletic</string>

    <!--Login Socio-->
    <string name="login">Login</string>
    <string name="botonregistro">registrate</string>
    <string name="user">Usuario</string>
    <string name="pass">Password</string>
    <string name="registrado">Introduce tus datos</string>
    <string name="noregistrado">SI aun no tienes cuenta de usuario</string>

    <!--Pantalla Socio-->
    <string name="bienvenidosocio">Bienvenido a tu seccion de socio</string>
    <string name="exclusivosocio">Desde esta pantalla podras acceder a
        contenido exclusivo del Athletic Club
        como por ejemplo hacer compras online,
        consultar la clasificacion o acceder sirectamente
        a la web del Athletic Club\n\n

    Pincha sobre los iconos y amplia tu experiencia.
    </string>

    <!--Nuevo registro-->
    <string name="registrate">¡ registrate leon !</string>
    <string name="nombre">Nombre</string>
    <string name="repitepass">Re Password</string>

    <!--Himno-->
    <string name="texto_ayuda">Athletic, Athletic, eup!
        Athletic gorri ta zuria
        danontzat zara zu geuria.
        Erritik sortu zinalako
        maite zaitu erriak.\n\n


        Gaztedi gorri-zuria
        zelai orlegian
        Euskalerriaren
        erakusgarria.
        Zabaldu daigun guztiok
        irrintzi alaia:
        Athletic, Athletic
        zu zara nagusia!
        Altza gaztiak!\n\n


        Athletic, Athletic
        gogoaren indarra.
        Aritz zarraren enborrak
        loratu dau orbel barria.\n\n


        Aupa mutillak!
        Aurrera gure gaztiak!
        Bilbo ta Bizkai guztia
        goratu bedi munduan.
        Aupa mutillak!
        Gora beti Euskalerria!
        Athletic gorri-zuria
        geuria.\n\n

        Bilbo ta Bizkaiko gaztiak gora!
        Euskaldun zintzoak aurrera!
    </string>

    <!--Acerca de-->
    <string name="acercade">Esta app ha sido desarrollada por Laurentzi Aparicio Rico,
    como parte de la asignatura "Multimedia del grado superior en Desarrollo de Aplicaciones Multiplataforma.\n
        "</string>
    <string name="copyright">Todos los derechos son propiedad del Athletic Club</string>
    <string name="menuAcerca">Pulsa para seguir mi trabajo</string>
    <string name="compartir">Comparte la app</string>

    <!--Mas-->
    <string name="camponombre">Nombre</string>
    <string name="campousuario">Usuario</string>
    <string name="campopass">Password</string>

</resources>
